adding inline responsiveness

--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="/pencil.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
-  <body>
+  <body
+    style="background-image: url(/bgImage.png); width: 100vw; height: 100vh"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
